10643
Also, the existential over the polytype reminds me of what happens when you try to define local generics.
{code}
scala> def f() = { class A[T](x: T) ; new A(5) }
<console>:7: error: can't existentially abstract over parameterized type A[Int]
       def f() = { class A[T](x: T) ; new A(5) }
                 ^
{code}
